// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow deve envelopar cada filho em um elemento que crie espaçamento horizontal 1`] = `
<div
  class="css-1k5rx2j"
>
  <div
    class="css-1ueujd4"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="css-1ueujd4"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="css-1ueujd4"
  >
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`Flow deve suportar o parâmetro direction 1`] = `
<div
  class="css-1n0xhs7"
>
  <div
    class="css-1ueujd4"
  >
    <div>
      1
    </div>
  </div>
  <div
    class="css-1ueujd4"
  >
    <div>
      2
    </div>
  </div>
  <div
    class="css-1ueujd4"
  >
    <div>
      3
    </div>
  </div>
</div>
`;

exports[`Flow deve suportar o parâmetro hSpacing 1`] = `
<div
  class="css-16nph7i"
>
  <div
    class="css-w6y3nz"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="css-w6y3nz"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="css-w6y3nz"
  >
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`Flow deve suportar o parâmetro vSpacing 1`] = `
<div
  class="css-1k5rx2j"
>
  <div
    class="css-pmvu5p"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="css-pmvu5p"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="css-pmvu5p"
  >
    <span>
      3
    </span>
  </div>
</div>
`;
